# ajazz-controller

./: .gitignore  README.md  ajazz-controller.pyproj  ajazz-controller.sln  pyproject.toml  requirements.txt
docs/: architecture.md  protocol-notes.md
examples/: list_devices.py  test_brightness.py
src/ajazz_controller/: __init__.py  __main__.py
src/ajazz_controller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ajazz_controller/core/: __init__.py  ajazz_device.py  hid_device.py
tests/: test_hid_device.py
