[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ajazz-controller"
version = "0.1.0"
description = "Cross-platform controller for Ajazz AKP153E stream dock"
requires-python = ">=3.10"
dependencies = [
    "hid>=0.0.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0"
]